    - Ognyan Kulev         : Updated Bulgarian translation (bg.po)
    - K. Margaritis        : Updated Greek translation (el.po)
    - Peter Mann           : Updated Slovak translation (sk.po)
    - Eugeniy Meshcheryakov : Updated Ukrainian translation (uk.po)
    - Andre Dahlqvist      : Update Swedish translation (sv.po)
    - Dennis Stampfer      : Update German translation (de.po)

 -- Ognyan Kulev <ogi@fmi.uni-sofia.bg>  Sat, 14 Feb 2004 18:31:13 +0200

choose-mirror (0.030) unstable; urgency=low

  * Christian Perrier
    - Mark some templates strings for translation. Closes: #231617
    - Rewrite the mirror/*/country short description and several
      other templates (lose some jargon use)
  * Kenshi Muto
    - When manual http/ftp, directory should be ended with /.
      It is helpful to show users about this (or append automatically),
      but I simply add / into default value of templates at now.
  * Joey Hess
    - Use debhelper's new udeb support.

  * Translations:
    - Miguel Figueiredo    : Updated Portuguese translation (pt.po)
    - Kenshi Muto          : Updated Japanese translation (ja.po)
    - Christian Perrier    : Updated French translation (fr.po)
    - K. Margaritis        : Updated Greek translation (el.po)
    - Claus Hindsgaul      : Updated Danish translation (da.po)
    - André Luís Lopes     : Updated Brazilian Portuguese translation (pt_BR.po)
    - Kęstutis Biliūnas    : Updated Lithuanian translation (lt.po)
    - Giuseppe Sacco       : Updated italian translation (it.po)
    - Jordi Mallach        : Updated Catalan translation (ca.po)
    - Miroslav Kure        : Updated Czech translation (cs.po)
    - Carlos Z.F. Liu      : Updated Simplified Chinese translation (zh_CN.po)
    - Eugen Meshcheryakov  : added Ukrainian translation (uk.po)
    - Bart Cornelis        : - Updated Dutch (nl.po) translation
                             - Added corrections send by Bastiaan van
                               Eeckhoudt